Fix css responsive  error and top navbar overlapping
Issues: #15, #16

--- a/reflow-maven-skin/src/main/resources/css/reflow-skin.css
+++ b/reflow-maven-skin/src/main/resources/css/reflow-skin.css
@@ -146,18 +146,16 @@ a[name]:before {
     padding-top: 0;
 }
 
-/* Fixed subnav support: */
-
-/* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
-@media (min-width: 980px) {
-  .navbar.affix {
+.navbar.affix {
     position: fixed;
     top: 50px;
     right: 0;
     left: 0;
     z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
     margin-bottom: 0;
-  }
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 .navbar.affix .navbar-inner {
     border-width: 0 0 1px;
@@ -171,10 +169,7 @@ a[name]:before {
             box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
   }
 
-.navbar.affix .container {
-    width: 940px;
-  }
-}
+
 
 /* Other screen sizes navbar container width */
 @media (min-width: 1200px) {
@@ -185,7 +180,7 @@ a[name]:before {
 
 #toc-bar {
     z-index:1020;
-  }
+}
 
 
 
@@ -277,15 +272,7 @@ a[name]:before {
 /* Footer */
 
 footer.well {
-  padding: 50px 0;
   margin-top: 70px;
-  margin-bottom: 0;
-  -webkit-border-radius: 0;
-     -moz-border-radius: 0;
-          border-radius: 0;
-  border-right: 0;
-  border-left: 0;
-  font-size: 90%;
 }
 
 footer.well p,
@@ -294,5 +281,12 @@ footer.well p,
 }
 
 .subfooter {
-  padding: 30px 0;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 767px) {
+    .bottom-description {
+        margin-top: 15px;
+    }
 }
